@@ -35,6 +35,7 @@ Version 1.1.1 to be released
 - Enh #941: AR now allows MANY_MANY relation to be specified more flexibly (Qiang)
 - Enh #953: Added CGridView::hideHeader (Qiang)
 - Enh #955: Added validateValue() to CUrlValidator and CEmailValidator (Qiang)
+- Enh #992: Added 'data' option to CTabView.tabs property (Qiang)
 - Enh: Refactored the blog demo to make use of the new CActiveForm and the filtering feature of CGridView (Qiang)
 - Enh: Improved the code generated by yiic, including menu refactoring, filtering/search support, and using active form (Qiang)
 - Enh: Improved CHtml::beginForm() to auto-generate hidden fields for a GET form whose action contains query string (Qiang)
